--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
+
+*.iml
+
+## Directory-based project format:
+.idea/
+
+# Vim related
 *.swap
